ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-ingress
  namespace: tekton-pipelines
  annotations:
    # kubernetes.io/ingress.class: nginx
    # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  # tls:
  #   - hosts:
  #       - tekton.techaid.tech
  #     secretName: tekton-tls-cert
  rules:
    - host: tekton.techaid.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
